force-app/main/default/objects/IT_Funding_Source__c/IT_Funding_Source__c.object-meta.xml
<CustomObject>
    <label>Funding Source</label>
    <nameField>
        <label>Funding Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>