force-app/main/default/objects/IT_Funding_Source__c/fields/Incentive_for_Membership_percentage__c.field-meta.xml
<CustomField>
    <fullName>Incentive_for_Membership_percentage__c</fullName>
    <inlineHelpText>Indicare l&#39;incentivo in percentuale</inlineHelpText>
    <label>Incentive for Membership percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>