force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>IT_Beneficiaries__c</fullName>
    <label>Beneficiaries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>