force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Cessation_Residue_Management__c.field-meta.xml
<CustomField>
    <fullName>IT_Cessation_Residue_Management__c</fullName>
    <label>Cessation Residue Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>