force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Details_CCNL__c.field-meta.xml
<CustomField>
    <fullName>IT_Details_CCNL__c</fullName>
    <label>Dettagli CCNL</label>
    <type>TextArea</type>
</CustomField>