force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Effective_Amount__c.field-meta.xml
<CustomField>
    <fullName>IT_Effective_Amount__c</fullName>
    <formula>IT_Potential_Amount__c  *  IT_Rate_of_accession__c</formula>
    <label>Effective Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>