force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Incentive_for_Membership__c.field-meta.xml
<CustomField>
    <fullName>IT_Incentive_for_Membership__c</fullName>
    <inlineHelpText>Indicare l&#39;incentivo in euro</inlineHelpText>
    <label>Incentive for Membership</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>