force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Informative_Notes__c.field-meta.xml
<CustomField>
    <fullName>IT_Informative_Notes__c</fullName>
    <label>Note informative</label>
    <type>TextArea</type>
</CustomField>