force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Loaded_Cash_Welfare_Amounts__c.field-meta.xml
<CustomField>
    <fullName>IT_Loaded_Cash_Welfare_Amounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loaded Cash/Welfare Amounts</label>
    <type>Checkbox</type>
</CustomField>