force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Membership_Choice_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Membership_Choice_Start_Date__c</fullName>
    <label>From</label>
    <type>Date</type>
</CustomField>