force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Membership_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Membership_Payment_Type__c</fullName>
    <label>Membership Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IT_Platform_Choice__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Packages percentage</fullName>
            </value>
            <value>
                <fullName>Packages amount</fullName>
            </value>
            <value>
                <fullName>Free amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>