force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Membership_Payment_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>IT_Membership_Payment_Type_Notes__c</fullName>
    <inlineHelpText>Indicare eventuali scaglioni previsti dall’accordo</inlineHelpText>
    <label>Membership Payment Type Notes</label>
    <type>TextArea</type>
</CustomField>