force-app/main/default/objects/IT_Funding_Source__c/fields/IT_New_Entries_Introduction__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Entries_Introduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Entries Introduction</label>
    <type>Checkbox</type>
</CustomField>