force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Per_capita_Amount__c.field-meta.xml
<CustomField>
    <fullName>IT_Per_capita_Amount__c</fullName>
    <label>Per-capita Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>