force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Plan__c.field-meta.xml
<CustomField>
    <fullName>IT_Plan__c</fullName>
    <label>Plan</label>
    <referenceTo>IT_Plan__c</referenceTo>
    <relationshipLabel>Funding Sources</relationshipLabel>
    <relationshipName>Funding_Sources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>