force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Potential_Amount__c.field-meta.xml
<CustomField>
    <fullName>IT_Potential_Amount__c</fullName>
    <formula>IT_Beneficiaries__c  *  IT_Per_capita_Amount__c</formula>
    <label>Potential Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>