force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Rate_of_accession__c.field-meta.xml
<CustomField>
    <fullName>IT_Rate_of_accession__c</fullName>
    <formula>IF(  TEXT(IT_Type__c)  = &quot;PDR&quot;,  IT_Beneficiaries_Member__c  /  IT_Beneficiaries__c , 1 )</formula>
    <label>Rate of accession</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>