force-app/main/default/objects/IT_Funding_Source__c/fields/IT_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDR</fullName>
            </value>
            <value>
                <fullName>CCNL</fullName>
            </value>
            <value>
                <fullName>Liberality</fullName>
            </value>
            <value>
                <fullName>Bound</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>