force-app/main/default/objects/IT_Funding_Source__c/validationRules/VRIT02_Funding_Start_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Funding_Start_and_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				IT_Membership_Choice_End_Date__c &lt; IT_Membership_Choice_Start_Date__c,
				NOT($User.ER_BypassVR__c),
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;))</errorConditionFormula>
    <errorMessage>Membership Choice End Date must be after Membership Choice Start Date!</errorMessage>
</ValidationRule>