force-app/main/default/objects/IT_Funding_Source__c/validationRules/VRIT03_Beneficiaries.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT03_Beneficiaries</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
 
IT_Beneficiaries__c &lt;IT_Beneficiaries_Member__c 
)</errorConditionFormula>
    <errorMessage>Beneficiaries member cannot be more than Beneficiaries!</errorMessage>
</ValidationRule>